--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-GOOGLE_API_KEY="AIzaSyAstCH6K9wtWt1-PZ4eJvl9ggLqfS6hotU"
+GOOGLE_API_KEY="your api key"
+
+// it can be any openAI key or google api key or anything
